<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_character_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:contentDescription="@string/characters_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/character_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/character_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Antenna Mortyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy" />

            <ImageView
                android:id="@+id/color_indicator"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/color_indicator_all"
                android:src="@drawable/ic_circle_red"
                app:layout_constraintBottom_toTopOf="@id/last_known_location_text"
                app:layout_constraintStart_toEndOf="@id/character_image"
                app:layout_constraintTop_toBottomOf="@id/character_name" />


            <TextView
                android:id="@+id/character_species_and_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/color_indicator"
                app:layout_constraintTop_toBottomOf="@+id/character_name"
                tools:text="Alive-Human" />

            <TextView
                android:id="@+id/last_known_location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/last_known_location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/character_image"
                app:layout_constraintTop_toBottomOf="@+id/character_species_and_status" />

            <TextView
                android:id="@+id/last_known_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/character_image"
                app:layout_constraintTop_toBottomOf="@id/last_known_location_text"
                tools:text="Earth" />

            <TextView
                android:id="@+id/first_seen_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/first_seen_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/character_image"
                app:layout_constraintTop_toBottomOf="@+id/last_known_location" />

            <TextView
                android:id="@+id/first_seen_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/character_image"
                app:layout_constraintTop_toBottomOf="@id/first_seen_in_text"
                tools:text="Tolal Rickall" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>